--- a/plugins/org.eclipse.emf.ecore/pom.xml
+++ b/plugins/org.eclipse.emf.ecore/pom.xml
@@ -1,18 +1,99 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
-  <parent>
-    <groupId>org.eclipse.emf</groupId>
-    <artifactId>org.eclipse.emf.plugins</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../../releng/org.eclipse.emf.parent/plugins</relativePath>
-  </parent>
 
   <groupId>org.eclipse.emf</groupId>
   <artifactId>org.eclipse.emf.ecore</artifactId>
-  <version>2.15.0-SNAPSHOT</version>
-  <packaging>eclipse-plugin</packaging>
+  <version>2.15.0</version>
+  <packaging>jar</packaging>
 
+  <properties>
+      <maven.compiler.source>11</maven.compiler.source>
+      <maven.compiler.target>11</maven.compiler.target>
+  </properties>
+
+  <dependencies>
+      <dependency>
+          <groupId>org.eclipse.platform</groupId>
+          <artifactId>org.eclipse.core.runtime</artifactId>
+          <version>3.15.100</version>
+          <optional>true</optional>
+      </dependency>
+      <dependency>
+          <groupId>org.eclipse.emf</groupId>
+          <artifactId>org.eclipse.emf.common</artifactId>
+          <version>2.15.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.eclipse.platform</groupId>
+          <artifactId>org.eclipse.core.resources</artifactId>
+          <version>3.14.0</version>
+          <optional>true</optional>
+      </dependency>
+  </dependencies>
+  
+  <dependencyManagement>
+      <dependencies>
+          <dependency>
+              <groupId>org.eclipse.platform</groupId>
+              <artifactId>org.eclipse.equinox.common</artifactId>
+              <version>3.10.200</version>
+          </dependency>
+          <dependency>
+              <groupId>org.eclipse.platform</groupId>
+              <artifactId>org.eclipse.equinox.registry</artifactId>
+              <version>3.10.200</version>
+          </dependency>
+          <dependency>
+              <groupId>org.eclipse.platform</groupId>
+              <artifactId>org.eclipse.equinox.preferences</artifactId>
+              <version>3.9.100</version>
+          </dependency>
+          <dependency>
+              <groupId>org.eclipse.platform</groupId>
+              <artifactId>org.eclipse.core.jobs</artifactId>
+              <version>3.11.0</version>
+          </dependency>
+          <dependency>
+              <groupId>org.eclipse.platform</groupId>
+              <artifactId>org.eclipse.core.contenttype</artifactId>
+              <version>3.7.1000</version>
+          </dependency>
+          <dependency>
+              <groupId>org.eclipse.platform</groupId>
+              <artifactId>org.eclipse.core.contenttype</artifactId>
+              <version>3.7.1000</version>
+          </dependency>
+      </dependencies>
+  </dependencyManagement>
+
+  <build>
+      <sourceDirectory>src</sourceDirectory>
+
+      <resources>
+          <resource>
+              <directory>${project.basedir}</directory>
+              <includes>
+                  <include>about.*</include>
+                  <include>plugin.*</include>
+                  <include>*.png</include>
+              </includes>
+          </resource>
+          <resource>
+              <directory>model</directory>
+              <includes>
+                  <include>*.ecore</include>
+                  <include>*.genmodel</include>
+                  <include>*.xsd</include>
+              </includes>
+              <targetPath>model</targetPath>
+          </resource>
+          <resource>
+              <directory>schema</directory>
+              <includes>
+                  <include>*.exsd</include>
+              </includes>
+              <targetPath>schema</targetPath>
+          </resource>
+      </resources>
+  </build>
 </project>
